Strings moved to strings table

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,64 @@
     <string name="title_route_detail">Route Detail</string>
     <string name="title_activity_routes">Fly by route</string>
     <string name="title_activity_tap_joystik">Tap joystik</string>
-
+	<string name="Camera">Camera</string>
+	<string name="GimbalError">Gimbal error</string>
+	<string name="Error">error</string>
+	<string name="GroundStationOpened">Ground station opened</string>
+	<string name="GroundStationDoesNotOpen">Ground station does not open</string>
+	<string name="GroundStationClosingError">Ground station closing error</string>
+	<string name="GroundStationPausingError">Ground station pausing error</string>
+	<string name="GroundStationResumingError">Ground station resuming error</string>
+	<string name="GroundStationGoHomeError">Go home error</string>	
+	<string name="TakeOffDone">Takeoff done. Altitude adjustment started</string>
+	<string name="AltAdjusted">Altitude adjusted</string>
+	<string name="TakeOffError">Takeoff error</string>
+	<string name="TaskStartError">Task starting error</string>
+	<string name="TaskUploadError">Task uploading error</string>
+	<string name="ObtainPermissionSuccessfully">Obtain Permission Successfully</string>
+	<string name="CanNotConnectToInternet">Can not connect to Internet</string>
+	<string name="TheMetaDataIsInvalid">The Meta data is invalid</string>
+	<string name="JDKDoNotSupportAES256">JDK do not support AES 256</string>
+	<string name="FailedToObtainDeviceID">Failed to obtain Device ID</string>
+	<string name="FailedToEncryptAES256">Failed to encrypt AES 256</string>
+	<string name="FailedToParseThePermissionData">Failed to parse the permission data</string>
+	<string name="AppKeyIsForbidden">App key is forbidden</string>
+	<string name="TheActiveDeviceNumbersAreUpToMaximal">The active device numbers are up to maximal</string>
+	<string name="ParseRequestURLError">Parse request URL error</string>
+	<string name="UnknownError">Unknown error</string>
+	<string name="Init">Init</string>
+	<string name="Moving">Moving</string>
+	<string name="Rotating">Rotating</string>
+	<string name="Incation">Incation</string>
+	<string name="PreAction">Pre action</string>
+	<string name="PostAction">Post action</string>
+	<string name="RouteFinished">Route finished</string>
+	<string name="WaypointUploaded">Waypoint uploaded:</string>
+	<string name="ConnectingToDrone">Connecting to drone</string>
+	<string name="CanNotInitDJISdk">Can not init DJI sdk</string>
+	<string name="TakePhotoDone">Take photo done</string>
+	<string name="TakePhotoStopped">Take photo stopped</string>
+	<string name="TaskStarted">Task started</string>
+	<string name="TaskEnded">Task ended</string>
+	<string name="TaskStopped">Task stopped</string>
+	<string name="TaskPaused">Task paused</string>
+	<string name="TaskResumed">Task resumed</string>
+	<string name="GoHome">Go home</string>
+	<string name="GoHomeStarted">Go home started</string>
+	<string name="Done">Done</string>
+	<string name="StartTask">Start task</string>
+	<string name="StopTask">Stop task</string>
+	<string name="PauseTask">Pause task</string>
+	<string name="ResumeTask">Resume task</string>
+	<string name="TakePhotoStarted">Take photo started</string>
+	<string name="EnterRouteName">Enter route name</string>
+	<string name="RouteName">Route name</string>
+	<string name="ConfirmDelete">Confirm delete</string>
+	<string name="Yes">Yes</string>
+	<string name="No">No</string>
+	<string name="AreYouSure">Are you sure?</string>
+	<string name="ManualControl">Manual control</string>
+	<string name="AutomaticalControl">Automatical control</string>
+	<string name="FlyingMode">Flying mode</string>
+	<string name="MCUStatus">MCU status</string>
 </resources>
