Added extra Russian strings

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Настройки</string>
     <string name="MCU_NO_ERROR">MCU NO ERROR</string>
     <string name="MCU_CONFIG_ERROR">MCU CONFIG ERROR</string>
-    <string name="MCU_SERIALNUM_ERROR ">MCU SERIALNUM ERROR </string>
+    <string name="MCU_SERIALNUM_ERROR ">MCU SERIAL NUM ERROR </string>
     <string name="MCU_IMU_ERROR">MCU IMU ERROR</string>
     <string name="MCU_X1_ERROR">MCU X1 ERROR</string>
     <string name="MCU_X2_ERROR">MCU X2 ERROR</string>
@@ -60,8 +60,8 @@
 	<string name="WaypointUploaded">Загружена птевая точка</string>
 	<string name="ConnectingToDrone">Соеденение с БПЛА</string>
 	<string name="CanNotInitDJISdk">Немогу соедениться с БПЛА</string>
-	<string name="TakePhotoDone">Сфотографировано</string>
-	<string name="TakePhotoStopped">Фотограффирование остановлено</string>
+	<string name="TakePhotoDone">Фотографирование закончено</string>
+	<string name="TakePhotoStopped">Фотографирование остановлено</string>
 	<string name="TaskStarted">Задача запущена</string>
 	<string name="TaskEnded">Задача завершена</string>
 	<string name="TaskStopped">Задача остановлена</string>
@@ -74,15 +74,27 @@
 	<string name="StopTask">Остановка задачи</string>
 	<string name="PauseTask">Приостановка задачи</string>
 	<string name="ResumeTask">Продолжение задачи</string>
-	<string name="TakePhotoStarted">Фотограффирование начато</string>
+	<string name="TakePhotoStarted">Фотографирование начато</string>
 	<string name="EnterRouteName">Введите название маршрута</string>
 	<string name="RouteName">Название маршрута</string>
 	<string name="ConfirmDelete">Подтвердите удаление</string>
 	<string name="Yes">Да</string>
 	<string name="No">Нет</string>
-	<string name="AreYouSure">Вы укверены?</string>
+	<string name="AreYouSure">Вы уверены?</string>
 	<string name="ManualControl">Ручное управление</string>
 	<string name="AutomaticalControl">Автоматическое управление</string>
 	<string name="FlyingMode">Режим полета</string>
 	<string name="MCUStatus">Состояние MCU</string>
+	<string name="Edit">Ред.</string>
+	<string name="Cancel">Отмена</string>
+	<string name="Delete">Удалить</string>
+	<string name="SelectFlightMode">Тип полета</string>
+	<string name="Routing">По маршруту</string>
+	<string name="Mapping">Сверху</string>
+	<string name="TakeOff">Взлет</string>
+	<string name="AltitudeM">Высрта (m)</string>
+	<string name="HeadingD">Направление (0-359)</string>
+	<string name="CamAngle">Угол камеры (0-89)</string>
+	<string name="RouteAdding">Добавление маршрута</string>
+	<string name="RouteNameEditing">Изменение названия</string>
 </resources>
