--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -94,12 +94,13 @@
 	<string name="TakeOff">Take off</string>
 	<string name="AltitudeM">Altitude (m)</string>
 	<string name="HeadingD">Heading (deg)</string>
-	<string name="CamAngle">Cam angle (deg)</string>
+	<string name="CamAngleD">Cam angle (deg)</string>
 	<string name="RouteAdding">Route adding</string>
 	<string name="RouteNameEditing">Route name editing</string>
 	<string name="CantSaveRoute">Can not save route</string>
 	<string name="RouteSaved">Route saved</string>
 	<string name="EnterValue">Enter value</string>
+	<string name="LengthM">Length (m)</string>
 	<string name="SpeedMS">Speed (ms)</string>
 	<string name="DistanceM">Distance (m)</string>
 	<string name="PowerlevelPerc">Power level (%)</string>
