Added media data transmission

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -116,4 +116,5 @@
 	<string name="ReachedWP">Текущяя точка</string>
 	<string name="SetCaptureModeError">Ошибка переклюения камеры в режим записи</string>
 	<string name="InitDownloadModeError">Ошибка переклюения камеры в режим загрузки изображений</string>
+	<string name="FileTransmissionError">Ошибка передачи файла</string>
 </resources>
